--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version = 0.1
+	maven_group = com.github.zly2006
+	archives_base_name = carpet-sls-addition
 
 # Dependencies
 	fabric_version=0.60.0+1.19.2
+	carpet_core_version=1.19.2-1.4.84+v221018
