--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.8
-	loader_version=0.14.9
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.4
+	loader_version=0.14.13
 
 # Mod Properties
 	mod_version = 0.3
 	maven_group = com.github.zly2006
 	archives_base_name = carpet-sls-addition
 
+#Fabric api
+
 # Dependencies
-	fabric_version=0.60.0+1.19.2
-	carpet_core_version=1.19.2-1.4.84+v221018
+	fabric_version=0.67.0+1.18.2
+	carpet_core_version=1.18.2-1.4.69+v220331
