--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.17
 
 # Mod Properties
-	mod_version = 0.5
+	mod_version = 0.5.1
 	maven_group = com.github.zly2006
-	archives_base_name = carpet-sls-addition
+	archives_base_name = Carpet-SLS-Addition
 
 # Dependencies
 	fabric_version=0.76.0+1.19.4
