--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 0.5.1
 	maven_group = com.github.zly2006
-	archives_base_name = Carpet-SLS-Addition
+	archives_base_name = carpet-sls-addition
 
 # Dependencies
 	fabric_version=0.76.0+1.19.4
