--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.1
-	loader_version=0.14.17
+	minecraft_version=1.20.1
+	yarn_mappings=1.20.1+build.2
+	loader_version=0.14.21
+
 
 # Mod Properties
-	mod_version = 0.5.1
+	mod_version = 0.6.0
 	maven_group = com.github.zly2006
 	archives_base_name = carpet-sls-addition
 
 # Dependencies
-	fabric_version=0.76.0+1.19.4
-	carpet_core_version=1.19.4-1.4.100+v230314
+	fabric_version=0.83.1+1.20.1
+	carpet_core_version=1.20-pre6-1.4.111+v230525
