--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,10 @@ org.gradle.jvmargs=-Xmx1G
 
 
 # Mod Properties
-	mod_version = 0.6.0
+	mod_version = 0.6.1
 	maven_group = com.github.zly2006
 	archives_base_name = carpet-sls-addition
 
 # Dependencies
 	fabric_version=0.83.1+1.20.1
-	carpet_core_version=1.20-pre6-1.4.111+v230525
+	carpet_core_version=1.20-1.4.112+v230608
